# MultiAgentSystems

./: .gitignore  AGENTS.md  LICENSE.md  README.md  REFLECTIONS.md  munder_difflin.db  pyproject.toml
examples/: order_processing_example.py
project/: DESING.md  DIAGRAM.md  logging.yaml  munder_difflin.db  project.py  quote_requests_sample.csv  test_inv_agent.db  test_results.csv  test_results_20260520.csv
starter/: INSTRUCTIONS.md  PROJECT_OVERVIEW.md  project_starter.py
tests/: inventory_agent_tests.py  openai_test.py  orchestrator_agent_tests.py  order_processor_agent_tests.py  quoting_agent_tests.py  sales_agent_tests.py  test_orchestrator_agent.db  test_utils.py  tools_tests.py
