[project]
name = "multiagentsystems"
version = "0.1.0"
description = "Udacity Agentic AI Nanodegree - Course 4: Multi-Agent Systems Project"
authors = [
    {name = "Russell Razo",email = "russellrc@gmail.com"}
]
readme = "project/README.md"
requires-python = "^3.14"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "pydantic-ai (>=1.87.0,<2.0.0)",
    "pydantic-evals (>=1.88.0,<2.0.0)",
    "openai (>=2.34.0,<3.0.0)",
    "python-json-logger (>=4.1.0,<5.0.0)"
]

[tool.poetry]
packages = [
    { include = "project" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
